[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version= "1.0.193", features=["derive"] }
sdl2 = { version= "0.36.0", features=["bundled"] }
serde_json = "1.0.108"
dirs = "5.0.1"
rand = "0.8.5"
